{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 129,
  "lineage": "08eccb8e-9534-3ef1-89c4-ed580d89b626",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac07f830529752f9",
            "association_id": "eipassoc-024bd64b5a28f0e10",
            "domain": "vpc",
            "id": "eipalloc-0ac07f830529752f9",
            "instance": "i-0067bd0977cc88200",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-092df613043e67d8f",
            "private_dns": "ip-10-0-0-50.ap-south-1.compute.internal",
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-43-205-84-2.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.84.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070c4e9bea8a1a04c",
            "association_id": "eipassoc-0d851f10fccba86cc",
            "domain": "vpc",
            "id": "eipalloc-070c4e9bea8a1a04c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0abe409f731a539eb",
            "private_dns": "ip-10-0-1-30.ap-south-1.compute.internal",
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-3-111-224-98.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.224.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "react_flask_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d3a50bd29811cd1",
            "arn": "arn:aws:ec2:ap-south-1:948490015467:instance/i-08d01c01e0960cedf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d01c01e0960cedf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "react_falsk_app_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08db0f89d717b654c",
            "private_dns": "ip-10-0-0-165.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.165",
            "public_dns": "ec2-15-206-92-9.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.92.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-057af0a2041271e77",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03433f9aea201f6cc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a82e24fe683cda54",
            "tags": {
              "Name": "dev-react-flask-app"
            },
            "tags_all": {
              "Name": "dev-react-flask-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03433f9aea201f6cc"
            ]
          },
          "dependencies": [
            "aws_key_pair.react_flask_key",
            "aws_security_group.react_flask_app_sg",
            "aws_subnet.pubsubnet-1",
            "aws_vpc.dev-vpc",
            "data.template_file.my_script"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948490015467:internet-gateway/igw-03d3b9f7a7c7d1687",
            "id": "igw-03d3b9f7a7c7d1687",
            "owner_id": "948490015467",
            "tags": {
              "Name": "dev-IGW"
            },
            "tags_all": {
              "Name": "dev-IGW"
            },
            "vpc_id": "vpc-01a31ff4260dfaef2"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070c4e9bea8a1a04c",
            "association_id": "eipassoc-0d851f10fccba86cc",
            "connectivity_type": "public",
            "id": "nat-073d7a4a78385702a",
            "network_interface_id": "eni-0abe409f731a539eb",
            "private_ip": "10.0.1.30",
            "public_ip": "3.111.224.98",
            "subnet_id": "subnet-037937a8ff4836012",
            "tags": {
              "Name": "dev-natgateway"
            },
            "tags_all": {
              "Name": "dev-natgateway"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.pubsubnet-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948490015467:route-table/rtb-016a9c55580b656f4",
            "id": "rtb-016a9c55580b656f4",
            "owner_id": "948490015467",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d3b9f7a7c7d1687",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-pub-route-table"
            },
            "tags_all": {
              "Name": "dev-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a31ff4260dfaef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5e1b56e8936b2e",
            "route_table_id": "rtb-016a9c55580b656f4",
            "subnet_id": "subnet-0a82e24fe683cda54"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.pubsubnet-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae1450f489b9531f",
            "route_table_id": "rtb-016a9c55580b656f4",
            "subnet_id": "subnet-037937a8ff4836012"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.pubsubnet-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "react_flask_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948490015467:security-group/sg-03433f9aea201f6cc",
            "description": "Enable SSh access on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03433f9aea201f6cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "expose port for backend",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "expose port for frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "react_flask_app_sg",
            "name_prefix": "",
            "owner_id": "948490015467",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "react_flask_app_sg"
            },
            "tags_all": {
              "Name": "react_flask_app_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a31ff4260dfaef2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948490015467:subnet/subnet-0a82e24fe683cda54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a82e24fe683cda54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948490015467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pub-sub-1"
            },
            "tags_all": {
              "Name": "dev-pub-sub-1"
            },
            "vpc_id": "vpc-01a31ff4260dfaef2"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948490015467:subnet/subnet-037937a8ff4836012",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037937a8ff4836012",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948490015467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pub-sub-2"
            },
            "tags_all": {
              "Name": "dev-pub-sub-2"
            },
            "vpc_id": "vpc-01a31ff4260dfaef2"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:948490015467:vpc/vpc-01a31ff4260dfaef2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092e37e0e1302040f",
            "default_route_table_id": "rtb-0d5d81349eccc4c4d",
            "default_security_group_id": "sg-068a3b7d2e785d754",
            "dhcp_options_id": "dopt-03ef75be1ccab60f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a31ff4260dfaef2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5d81349eccc4c4d",
            "owner_id": "948490015467",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}